Show the correct opacity in the segment gradient editor

BUG:394887