libs/ui/kis_autogradient.cc
@@ -72,11 +72,11 @@ void KisAutogradient::slotSelectedSegment(KoGradientSegment* segment)
     comboBoxInterpolationType->setCurrentIndex(segment->interpolation());
 
     int leftOpacity = segment->startColor().opacityF();
-    intNumInputLeftOpacity->setValue(leftOpacity);
+    intNumInputLeftOpacity->setValue(leftOpacity * 100);
     intNumInputLeftOpacity->setSuffix(i18n(" %"));
 
     int rightOpacity = segment->endColor().opacityF();
-    intNumInputRightOpacity->setValue(rightOpacity);
+    intNumInputRightOpacity->setValue(rightOpacity * 100);
     intNumInputRightOpacity->setSuffix(i18n(" %"));
 
     paramChanged();
